metrics ,ulti-query to single query for all metrics
